--- a/music_controller/frontend/templates/index.html
+++ b/music_controller/frontend/templates/index.html
@@ -7,11 +7,14 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
     />
-    <script type="module" crossorigin src="/static/assets/index-BwkN-PwU.js"></script>
+    <script type="module" crossorigin src="/static/assets/index-8m7O6bf-.js"></script>
+    <link rel="stylesheet" crossorigin href="/static/assets/index-DYKNb1un.css">
   </head>
   <body>
-    <div id="root">
+    <div id="main">
+      <div id="root">
+        
+      </div>
     </div>
-
   </body>
 </html>
