--- a/music_controller/music_controller_frontend/index.css
+++ b/music_controller/music_controller_frontend/index.css
@@ -15,5 +15,11 @@ html, body {
 #root {
     width: 100%;
     width: 100%;
-    display: flex;
+}
+
+.center {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
